<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_contacto_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_light">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/btCancelarContacto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/holo_orange_light"
            android:contentDescription="@string/descBtnCancelContacto"
            app:layout_constraintBottom_toTopOf="@+id/tilNombreProducto"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="?attr/actionModeCloseDrawable" />

        <ImageButton
            android:id="@+id/btGuardarContacto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/holo_orange_light"
            android:contentDescription="@string/descBtnGuardarContact"
            app:layout_constraintBottom_toTopOf="@+id/ibFotoProducto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_save" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilNombreProducto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="52dp"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/ibFotoProducto"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/etNombreContacto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombreContacto" />


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilReferenciaProducto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/ibFotoProducto"
            app:layout_constraintTop_toBottomOf="@+id/tilNombreProducto">

            <EditText
                android:id="@+id/etApellidosContacto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/apellidosContacto"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="81dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilPrecioProducto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/ibFotoProducto"
            app:layout_constraintTop_toBottomOf="@+id/tilReferenciaProducto">

            <EditText
                android:id="@+id/etTelefonoContacto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telefonoContacto"
                android:inputType="phone" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilPlazoCaducidad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/ibFotoProducto"
            app:layout_constraintTop_toBottomOf="@+id/tilPrecioProducto">

            <EditText
                android:id="@+id/etMovilContacto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/movilContacto"
                android:inputType="phone" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilEmailContacto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilPlazoCaducidad">

            <EditText
                android:id="@+id/etEmailContacto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/emailContacto"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <ImageButton
            android:id="@+id/ibFotoProducto"
            android:layout_width="151dp"
            android:layout_height="251dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="52dp"
            android:adjustViewBounds="true"
            android:background="@drawable/tvborder"
            android:contentDescription="@string/descFotoContacto"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.963"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@android:drawable/ic_menu_camera" />

        <Spinner
            android:id="@+id/spSectorProducto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/tvborder"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilEmailContacto" />

        <ImageButton
            android:id="@+id/ibInfoContacto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@android:color/holo_orange_light"
            android:contentDescription="@string/descInfoContacto"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spSectorProducto"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@android:drawable/ic_menu_info_details" />

    </android.support.constraint.ConstraintLayout>
</FrameLayout>