<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayoutVisitas"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tvborder3"
    tools:context="com.cta.android.appcomercial.controladores.VisitasFragment">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/holo_orange_dark">

        <ImageButton
            android:id="@+id/btAtrasVisita"
            android:layout_width="33dp"
            android:layout_height="32dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/tvborder3"
            android:contentDescription="@string/descAtrasNuevaVisita"
            android:src="?android:attr/homeAsUpIndicator"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tvFechaVisita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="TextView"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btGuardarVisita"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toEndOf="@+id/btAtrasVisita"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageButton
            android:id="@+id/btGuardarVisita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/tvborder3"
            android:contentDescription="@string/descGuardarNuevaVisita"
            android:src="@android:drawable/ic_menu_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btHoraInicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/tvborder3"
            android:text="@string/horainicio"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toTopOf="@+id/rgEmpresasVisita"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btAtrasVisita"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btHoraFinal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/tvborder3"
            android:text="@string/horafinal"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toTopOf="@+id/rgEmpresasVisita"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btGuardarVisita"
            app:layout_constraintVertical_bias="0.0" />

        <RadioGroup
            android:id="@+id/rgEmpresasVisita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="76dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/spTipoEvento"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvFechaVisita"
            app:layout_constraintVertical_bias="0.0">

            <RadioButton
                android:id="@+id/rbClienteVisita"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@android:color/background_light"
                android:text="@string/btClientes"
                android:textColor="@android:color/background_light" />

            <RadioButton
                android:id="@+id/rbRepresentadoVisita"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@android:color/background_light"
                android:text="@string/rb1"
                android:textColor="@android:color/background_light" />
        </RadioGroup>

        <Spinner
            android:id="@+id/spTipoEvento"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="144dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <AutoCompleteTextView
            android:id="@+id/acEmpresaVisita"
            android:layout_width="291dp"
            android:layout_height="49dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="36dp"
            android:layout_marginTop="8dp"
            android:hint="@string/hintBuscarEmpresa"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spTipoEvento"
            app:layout_constraintVertical_bias="0.046" />

        <Spinner
            android:id="@+id/spContacto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/acEmpresaVisita"
            app:layout_constraintVertical_bias="0.0" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spContacto"
            app:layout_constraintVertical_bias="0.104">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etNotasCita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/notasVisita"
                android:textColor="@color/colorPrimaryDark" />
        </android.support.design.widget.TextInputLayout>

        <ImageButton
            android:id="@+id/ibBuscaEmpresaVisita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/tvborder3"
            android:src="@android:drawable/ic_menu_search"
            app:layout_constraintBottom_toTopOf="@+id/spContacto"
            app:layout_constraintEnd_toStartOf="@+id/acEmpresaVisita"
            app:layout_constraintHorizontal_bias="0.888"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spTipoEvento"
            app:layout_constraintVertical_bias="0.666" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>