<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/tvborder">

    <TextView
        android:id="@+id/tvHoraInicioItemVisita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvHoraFinItemVisita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTituloVisita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toStartOf="@+id/tvHoraFinItemVisita"
        app:layout_constraintStart_toEndOf="@+id/tvHoraInicioItemVisita"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvLugarItemVisita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloVisita" />

    <ImageButton
        android:id="@+id/ibLlamadaItemVisita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/tvborder"
        android:contentDescription="@string/descLlamadaCita"
        app:layout_constraintEnd_toStartOf="@+id/ibEmailItemVisita"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLugarItemVisita"
        app:srcCompat="@android:drawable/ic_menu_call" />

    <ImageButton
        android:id="@+id/ibEmailItemVisita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="51dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/tvborder"
        android:contentDescription="@string/descEmailCita"
        app:layout_constraintEnd_toStartOf="@+id/ibNavegarItemVisita"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/ibLlamadaItemVisita"
        app:layout_constraintTop_toBottomOf="@+id/tvLugarItemVisita"
        app:srcCompat="@android:drawable/ic_dialog_email" />

    <ImageButton
        android:id="@+id/ibNavegarItemVisita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="51dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/tvborder"
        android:contentDescription="@string/descRutaCita"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ibInfoItemVisita"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/ibEmailItemVisita"
        app:layout_constraintTop_toBottomOf="@+id/tvLugarItemVisita"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_menu_compass" />

    <ImageButton
        android:id="@+id/ibInfoItemVisita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="51dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/tvborder"
        android:contentDescription="@string/descNotasCita"
        app:layout_constraintEnd_toStartOf="@+id/ibBorrarItemVisita"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/ibNavegarItemVisita"
        app:layout_constraintTop_toBottomOf="@+id/tvLugarItemVisita"
        app:srcCompat="@android:drawable/ic_menu_info_details" />

    <ImageButton
        android:id="@+id/ibBorrarItemVisita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/tvborder"
        android:contentDescription="@string/descEliminarCita"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/ibInfoItemVisita"
        app:layout_constraintTop_toBottomOf="@+id/tvLugarItemVisita"
        app:srcCompat="@android:drawable/ic_menu_delete" />

</android.support.constraint.ConstraintLayout>